[package]
name = "music-player"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
# Tauri 2.x 核心
tauri = { version = "2.0", features = ["protocol-asset"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 异步任务
tokio = { version = "1.0", features = ["full"] }
walkdir = "2.4"

# 核心：元数据解析（一个库顶替原来的 id3/mp3-duration/metaflac，支持自动修复乱码）
lofty = "0.21" 

# 封面图 base64 编码
base64 = "0.22"

# SQLite 数据库
rusqlite = { version = "0.31", features = ["bundled"] }

# Tauri 插件
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
